# tjm-vision-automation

./: .gitignore  README.md  pyproject.toml
src/: config.py  data_controller.py  main.py  os_agent.py  vision_engine.py
