[project]
name = "tjm-vision-automation"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "google-generativeai>=0.8.6",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pynput>=1.8.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
